# nix-btm

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  flake.nix  justfile  nvim_config.lua  opencode.json  rustfmt.toml  treefmt.toml
.github/workflows/: ci.yml  release.yml  update-flake-lock.yml
.opencode/agent/: project-programmer.md
crates/client/: Cargo.toml
crates/client/src/: daemon_comms.rs  derivation_tree.rs  emojis.rs  event_loop.rs  get_stats.rs  handle_internal_json.rs  main.rs  tracing.rs  tracing_init.rs  ui.rs
crates/clipboard/: Cargo.toml
crates/clipboard/src/: lib.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: main.rs
crates/json_parser/: Cargo.toml
crates/json_parser/src/: lib.rs
crates/nix-btm/: Cargo.toml
crates/nix-btm-common/: Cargo.toml
crates/nix-btm-common/src/: client_comms.rs  client_daemon_comms.rs  client_side.rs  daemon_comms.rs  daemon_side.rs  derivation_tree.rs  double_fork.rs  handle_internal_json.rs  lib.rs  notify.rs  protocol_common.rs  protocol_testing.rs  ring_reader.rs  ring_writer.rs  rpc.rs  rpc_client.rs  rpc_daemon.rs  shmem_common.rs
crates/nix-btm-common/tests/: client_daemon_e2e.rs  nix_build_integration.rs  ringbuffer_e2e.rs  rpc_e2e.rs
crates/nix-btm/src/: app.rs  cli.rs  daemon_side.rs  derivation_tree.rs  double_fork.rs  event_loop.rs  get_stats.rs  gruvbox.rs  handle_internal_json.rs  lib.rs  main.rs  notify.rs  protocol_common.rs  protocol_testing.rs  ring_reader.rs  ring_writer.rs  rpc.rs  rpc_daemon.rs  shutdown.rs  tracing_init.rs  tree_generation.rs  ui.rs
crates/nix-btm/tests/: client_daemon_e2e.rs  nix_build_integration.rs  rebuild_cancel_tree.rs  ringbuffer_e2e.rs  rpc_e2e.rs  state_integration.rs
src/: event_loop.rs  get_stats.rs  gruvbox.rs  listen_to_output.rs  main.rs  ui.rs
