[workspace]
members = ["crates/client","crates/daemon", "crates/json_parser"]
resolver = "2"

[workspace.package]
version = "0.4.0"
edition = "2024"
exclude = ["target_dirs", ".github", "target"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/DieracDelta/nix-btm"
keywords = ["nix", "monitor", "system-info", "tui"]
authors = [ "Justin Restivo (justin.p.restivo@gmail.com)"]
categories = ["development-tools::debugging"]

[workspace.dependencies]
clap = {version = "4.5.48", features = ["derive"]}
crossterm = {version = "0.29.0", features = ["event-stream"]}
rand = {version = "0.9.2", features = ["small_rng"]}
ratatui = {version = "0.29.0"}
# if I want nice effects
# tachyonfx = {git = "https://github.com/junkdog/tachyonfx"}
sysinfo = {version = "0.37.2"} #, features = ["debug"]}
tui-tree-widget = "0.23.1"
lazy_static = "1.5.0"
procfs = "0.18.0"
strip-ansi-escapes = "0.2.1"
strum = {version = "0.27.2", features = ["derive"]}
tokio = { version = "1.47.1", features = [ "rt-multi-thread", "net", "io-util", "macros", "sync", "time" ]}
serde = { version = "1.0.228", features = [ "derive", "alloc" ]}
serde_json = { version = "1.0.145"}
mimalloc = { version = "0.1.48" }
either = { version = "1.15.0" }
nix-compat = { git = "https://git.snix.dev/snix/snix.git", features = ["serde", "daemon"] }
num_enum = { version = "0.7.4" }
thiserror = { version = "2.0.17"}
serde_bytes = { version = "0.11.19"}
bstr = { version = "1.12.0" }
futures = { version = "0.3.31"}
tokio-stream = { version = "0.1.17", features = ["sync"]}
# tikv-jemallocator = {version = "0.6.0", features = ["unprefixed_malloc_on_supported_platforms"]}


[profile.release]
incremental = true
panic = "abort"
