[workspace]
members = ["crates/client", "crates/clipboard","crates/daemon", "crates/json_parser", "crates/nix-btm-common"]
resolver = "2"

[workspace.package]
version = "0.5.0"
edition = "2024"
exclude = ["target_dirs", ".github", "target"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/DieracDelta/nix-btm"
keywords = ["nix", "monitor", "system-info", "tui"]
authors = [ "Justin Restivo (justin.p.restivo@gmail.com)"]
categories = ["development-tools::debugging"]

[workspace.dependencies]
clap = {version = "4.5.51", features = ["derive"]}
crossterm = {version = "0.29.0", features = ["event-stream"]}
rand = {version = "0.9.2", features = ["small_rng"]}
ratatui = {version = "0.29.0"}
# if I want nice effects
# tachyonfx = {git = "https://github.com/junkdog/tachyonfx"}
sysinfo = {version = "0.37.2"} #, features = ["debug"]}
tui-tree-widget = "0.23.1"
lazy_static = "1.5.0"
procfs = "0.18.0"
strip-ansi-escapes = "0.2.1"
strum = {version = "0.27.2", features = ["derive"]}
tokio = { version = "1.48.0", features = [ "rt-multi-thread", "net", "io-util", "macros", "sync", "time", "process", "tracing"]}
serde = { version = "1.0.228", features = [ "derive", "alloc" ]}
serde_json = { version = "1.0.145"}
mimalloc = { version = "0.1.48" }
either = { version = "1.15.0" }
nix-compat = { git = "https://git.snix.dev/snix/snix.git", features = ["serde", "daemon"] }
num_enum = { version = "0.7.5" }
thiserror = { version = "2.0.17"}
serde_bytes = { version = "0.11.19"}
bstr = { version = "1.12.1" }
futures = { version = "0.3.31"}
tokio-stream = { version = "0.1.17", features = ["sync"]}
regex = { version = "1.12.2" }
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.20", features = ["fmt", "env-filter"]}
console-subscriber = { version = "0.5.0" }
anyhow = { version = "1.0.100" }

# protocol stuff
rustix = { version = "1.1.2", features = ["fs", "mm", "net", "event"] }
memmap2 = { version = "0.9" }
nix = { version = "0.30.1", default-features = false, features = ["socket", "uio"]}
serde_cbor = { version = "0.11.2"}
bytemuck = { version = "1.24.0", features = [ "derive"] }
libc = { version = "0.2.177" }
io-uring = { version = "0.7.11" }

[profile.dev]
incremental = true
panic = "abort"

[profile.release]
incremental = false
panic = "abort"
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

