[package]
name = "nix-btm"
description = "A nix process monitor"
version = { workspace = true }
edition = { workspace = true }
authors =  { workspace = true }
license-file =  { workspace = true }
readme =  { workspace = true }
repository =  { workspace = true }
keywords =  { workspace = true }
categories =  { workspace = true }
exclude =  { workspace = true }

[dependencies]
crossterm = {workspace = true}
rand = {workspace = true}
ratatui = {workspace = true}
sysinfo = {workspace = true}
tui-tree-widget = {workspace = true}
lazy_static = {workspace = true}
procfs = {workspace = true}
strip-ansi-escapes = {workspace = true}
strum = {workspace = true}
