[package]
name = "nix-btm"
description = "A nix process monitor"
version = { workspace = true }
edition = { workspace = true }
authors =  { workspace = true }
license-file =  { workspace = true }
readme =  { workspace = true }
repository =  { workspace = true }
keywords =  { workspace = true }
categories =  { workspace = true }
exclude =  { workspace = true }

[dependencies]
crossterm = {workspace = true}
rand = {workspace = true}
ratatui = {workspace = true}
sysinfo = {workspace = true}
tui-tree-widget = {workspace = true}
lazy_static = {workspace = true}
strip-ansi-escapes = {workspace = true}
strum = {workspace = true}
clap = {workspace = true}
tokio = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
mimalloc = {workspace = true}
either = {workspace = true}
num_enum = {workspace = true}
thiserror = {workspace = true}
serde_bytes = {workspace = true}
bstr = {workspace = true}
json-parsing-nix =  {path = "../json_parser"}
nix-btm-common =  {path = "../nix-btm-common"}
tui-clipboard =  {path = "../clipboard", features = ["async-io"]}
futures = {workspace = true}
tokio-stream = {workspace = true}
regex = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
console-subscriber = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
procfs = {workspace = true}
