[package]
name = "nix-btm-daemon"
description = "Accompanying daemon for nix-btm"
version = { workspace = true }
edition = { workspace = true }
authors =  { workspace = true }
license-file =  { workspace = true }
readme =  { workspace = true }
repository =  { workspace = true }
keywords =  { workspace = true }
categories =  { workspace = true }
exclude =  { workspace = true }

[dependencies]
