[package]
name = "nix-btm-common"
version.workspace = true
edition.workspace = true
exclude.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
authors.workspace = true
categories.workspace = true

[dependencies]
futures = {workspace = true }
either = {workspace = true }
json-parsing-nix =  {path = "../json_parser" }
regex = { workspace = true }
serde = {workspace = true }
serde_json = {workspace = true }
serde_bytes = {workspace = true }
tokio = {workspace = true }
tokio-stream = {workspace = true }
bstr = {workspace = true }
tracing = { workspace = true }
bytemuck = { workspace = true }
rustix = { workspace = true }
serde_cbor = { workspace = true }
nix = { workspace = true }
libc = { workspace = true }
