[package]
name = "nix-btm"
description = "A nix process monitor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true

[dependencies]
crossterm.workspace = true
rand.workspace = true
ratatui.workspace = true
sysinfo.workspace = true
tui-tree-widget.workspace = true
lazy_static.workspace = true
strip-ansi-escapes.workspace = true
strum.workspace = true
clap.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
mimalloc.workspace = true
either.workspace = true
num_enum.workspace = true
thiserror.workspace = true
serde_bytes.workspace = true
bstr.workspace = true
json-parsing-nix =  { path = "../json_parser" }
tui-clipboard =  {path = "../clipboard", features = ["async-io"]}
futures.workspace = true
tokio-stream.workspace = true
regex.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
console-subscriber.workspace = true
libc.workspace = true
rustix.workspace = true
nix.workspace = true
ctrlc.workspace = true
bytemuck.workspace = true
serde_cbor.workspace = true
memmap2.workspace = true
snafu.workspace = true
eyre.workspace = true
psx-shm.workspace = true
nix-compat.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
procfs = {workspace = true}
io-uring.workspace = true

[dev-dependencies]
color-eyre.workspace = true
tempfile = "3"

[lints]
workspace = true
